Removed all warnings.