@@ -1,7 +1,6 @@
 package mc.nightmarephoenix.anchorsell.utils;
 
 import com.tchristofferson.configupdater.ConfigUpdater;
-import mc.nightmarephoenix.anchorsell.AnchorSell;
 import mc.nightmarephoenix.anchorsell.models.Anchor;
 import mc.nightmarephoenix.anchorsell.thirdparty.vault.EconomyManager;
 import mc.nightmarephoenix.anchorsell.api.Global;
@@ -22,8 +21,8 @@ public class Utils {
 
     /**
      * Translates the color codes.
-     * @param str
-     * @return
+     * @param str string
+     * @return formatted
      */
     public static String Color(String str) {
         return ChatColor.translateAlternateColorCodes('§', str.replace("&", "§"));
@@ -31,8 +30,8 @@ public class Utils {
 
     /**
      * Same as above but with a list.
-     * @param strList
-     * @return
+     * @param strList string list
+     * @return formatted
      */
     public static List<String> Color(List<String> strList) {
         for(String string: strList) {
@@ -43,19 +42,20 @@ public class Utils {
 
     /**
      * Returns a new anchor with a given level and the quantity.
-     * @param level
-     * @param quantity
+     * @param level anchor level
+     * @param quantity quantity
      * @return ItemStack
      */
     public static ItemStack getAnchor(int level, int quantity) {
         ItemStack item = new ItemStack(Material.RESPAWN_ANCHOR, quantity);
-        ArrayList<String> Lore = new ArrayList<String>();
+        ArrayList<String> Lore = new ArrayList<>();
         Lore.add("");
         Lore.add(Utils.Color("&7&m----------------------------"));
         Lore.add(Utils.Color("&fAnchor level: &e" + level));
         Lore.add(Utils.Color("&fMoney per minute: &e" + Utils.getMoneyPerMinute(level)));
         Lore.add(Utils.Color("&7&m----------------------------"));
         ItemMeta meta = item.getItemMeta();
+        assert meta != null;
         meta.setDisplayName(Utils.Color("&5&lAnchor"));
         meta.setLore(Lore);
         item.setItemMeta(meta);
@@ -64,31 +64,27 @@ public class Utils {
 
     /**
      * Returns the anchor level but with the ore.
-     * @param plugin
-     * @param level
-     * @return
+     * @param level anchor level
+     * @return ore level string
      */
-    public static String getAnchorOreLevelString(AnchorSell plugin, int level) {
+    public static String getAnchorOreLevelString(int level) {
         if(level > 64)
-            return Color(plugin.getConfig().getString("levels.maxed-out-level"));
+            return Color(Objects.requireNonNull(Global.plugin.getConfig().getString("levels.maxed-out-level")));
         else if(level < 16)
-            return Color(plugin.getConfig().getString("levels.1"));
+            return Color(Objects.requireNonNull(Global.plugin.getConfig().getString("levels.1")));
         else if(level < 24)
-            return Color(plugin.getConfig().getString("levels.2"));
+            return Color(Objects.requireNonNull(Global.plugin.getConfig().getString("levels.2")));
         else if(level < 32)
-            return Color(plugin.getConfig().getString("levels.3"));
+            return Color(Objects.requireNonNull(Global.plugin.getConfig().getString("levels.3")));
         else if(level < 48)
-            return Color(plugin.getConfig().getString("levels.4"));
-        else if(level <= 64)
-            return Color(plugin.getConfig().getString("levels.5"));
-        else
-            return null;
+            return Color(Objects.requireNonNull(Global.plugin.getConfig().getString("levels.4")));
+        else return Color(Objects.requireNonNull(Global.plugin.getConfig().getString("levels.5")));
     }
 
     /**
      * Anchor level translated to ores.
-     * @param level
-     * @return
+     * @param level anchor level
+     * @return level material
      */
     public static Material getAnchorOreLevel(int level) {
         if(level < 16)
@@ -107,7 +103,7 @@ public class Utils {
 
     /**
      * Money per minute with a given anchor level.
-     * @param anchorLevel
+     * @param anchorLevel level
      * @return double
      */
     public static double getMoneyPerMinute(int anchorLevel) {
@@ -116,28 +112,25 @@ public class Utils {
 
     /**
      * Money to the next upgrade.
-     * @param anchorLevel
-     * @param plugin
+     * @param anchorLevel level
      * @return double
      */
-    public static double getMoneyToUpgrade(int anchorLevel, AnchorSell plugin) {
-        return getMoneyPerMinute(anchorLevel + 1) * 60 * plugin.getConfig().getInt("anchor.upgrade-multiplier"); // the money that gives the next level multiplied by 16hs
+    public static double getMoneyToUpgrade(int anchorLevel) {
+        return getMoneyPerMinute(anchorLevel + 1) * 60 * Global.plugin.getConfig().getInt("anchor.upgrade-multiplier"); // the money that gives the next level multiplied by 16hs
     }
 
     /**
      * Gets the lore of a given anchor.
-     * @param path
-     * @param plugin
-     * @param location
-     * @param player
-     * @return
+     * @param location anchor location
+     * @param player player
+     * @return lore
      */
-    public static  List<String> getLore(String path, AnchorSell plugin, Location location, Player player) {
+    public static List<String> getLore(String path, Location location, Player player) {
         List<String> res = new ArrayList<>();
-        for(String str: Utils.Color(plugin.getConfig().getStringList(path))) {
+        for(String str: Utils.Color(Global.plugin.getConfig().getStringList(path))) {
             int level = StorageManager.getAnchorLevel(location);
             String levelToUpgrade = String.valueOf(level + 1);
-            String priceOfUpgrade = String.valueOf(Utils.getMoneyToUpgrade(level, plugin));
+            String priceOfUpgrade = String.valueOf(Utils.getMoneyToUpgrade(level));
             if((level + 1) > 64) {
                 levelToUpgrade = "";
                 priceOfUpgrade = "-";
@@ -146,31 +139,29 @@ public class Utils {
             res.add(str.replaceAll("%level%", String.valueOf(level)).
                     replaceAll("%moneyPer15Minutes%", String.valueOf(Utils.getMoneyPerMinute(level) * 15)).
                     replaceAll("%moneyPerMinute%", String.valueOf(Utils.getMoneyPerMinute(level))).
-                    replaceAll("%oreLevel%", Utils.getAnchorOreLevelString(plugin, level)).
+                    replaceAll("%oreLevel%", Utils.getAnchorOreLevelString(level)).
                     replaceAll("%playerBalance%", String.valueOf(EconomyManager.getEconomy().getBalance(player))).
                     replaceAll("%playerAnchors%", String.valueOf(StorageManager.getPlayerTotalAnchors(player))).
-                    replaceAll("%maxPlayerAnchors%", String.valueOf(plugin.getConfig().getInt("total-anchors-user-can-have"))).
+                    replaceAll("%maxPlayerAnchors%", String.valueOf(Global.plugin.getConfig().getInt("total-anchors-user-can-have"))).
                     replaceAll("%playerMoneyPer15Minutes%", String.valueOf(StorageManager.getPlayerMoneyPerMinute(player) * 15)).
                     replaceAll("%priceOfUpgrade%", priceOfUpgrade).
                     replaceAll("%nextLevel%", levelToUpgrade).
-                    replaceAll("%nextLevelOre%", Utils.getAnchorOreLevelString(plugin, level + 1)));
+                    replaceAll("%nextLevelOre%", Utils.getAnchorOreLevelString(level + 1)));
         }
         return res;
     }
 
     /**
      * Gets the lore of an anchor but without the player.
-     * @param path
-     * @param plugin
-     * @param location
-     * @return
+     * @param location anchor location
+     * @return lore
      */
-    public static  List<String> getLore(String path, AnchorSell plugin, Location location) {
+    public static List<String> getLore(String path, Location location) {
         List<String> res = new ArrayList<>();
-        for(String str: Utils.Color(plugin.getConfig().getStringList(path))) {
+        for(String str: Utils.Color(Global.plugin.getConfig().getStringList(path))) {
             int level = StorageManager.getAnchorLevel(location);
             String levelToUpgrade = String.valueOf(level + 1);
-            String priceOfUpgrade = String.valueOf(Utils.getMoneyToUpgrade(level, plugin));
+            String priceOfUpgrade = String.valueOf(Utils.getMoneyToUpgrade(level));
             if((level + 1) > 64) {
                 levelToUpgrade = "";
                 priceOfUpgrade = "-";
@@ -178,25 +169,26 @@ public class Utils {
             res.add(str.replaceAll("%level%", String.valueOf(level)).
                     replaceAll("%moneyPer15Minutes%", String.valueOf(Utils.getMoneyPerMinute(level) * 15)).
                     replaceAll("%moneyPerMinute%", String.valueOf(Utils.getMoneyPerMinute(level))).
-                    replaceAll("%oreLevel%", Utils.getAnchorOreLevelString(plugin, level)).
-                    replaceAll("%maxPlayerAnchors%", String.valueOf(plugin.getConfig().getInt("total-anchors-user-can-have"))).
+                    replaceAll("%oreLevel%", Utils.getAnchorOreLevelString(level)).
+                    replaceAll("%maxPlayerAnchors%", String.valueOf(Global.plugin.getConfig().getInt("total-anchors-user-can-have"))).
                     replaceAll("%priceOfUpgrade%", priceOfUpgrade).
                     replaceAll("%nextLevel%", levelToUpgrade).
-                    replaceAll("%nextLevelOre%", Utils.getAnchorOreLevelString(plugin, level + 1)));
+                    replaceAll("%nextLevelOre%", Utils.getAnchorOreLevelString(level + 1)));
         }
         return res;
     }
 
     /**
      * Creates a determined item.
-     * @param name
-     * @param material
-     * @param enchanted
+     * @param name item name
+     * @param material item material
+     * @param enchanted enchanted?
      * @return ItemStack
      */
     public static ItemStack createItem(String name, Material material, boolean enchanted) {
         ItemStack item = new ItemStack(material, 1);
         ItemMeta meta = item.getItemMeta();
+        assert meta != null;
         meta.setDisplayName(name);
         if(enchanted)
             meta.addEnchant(Enchantment.DURABILITY, 1, true);
@@ -206,15 +198,16 @@ public class Utils {
 
     /**
      * Creates a item with lore.
-     * @param name
-     * @param material
-     * @param lore
-     * @param enchanted
+     * @param name item name
+     * @param material item material
+     * @param lore item lore
+     * @param enchanted enchanted?
      * @return ItemStack
      */
     public static ItemStack createItem(String name, Material material, List<String> lore, boolean enchanted) {
         ItemStack item = new ItemStack(material, 1);
         ItemMeta meta = item.getItemMeta();
+        assert meta != null;
         meta.setDisplayName(name);
         meta.setLore(lore);
         if(enchanted)
@@ -225,21 +218,16 @@ public class Utils {
 
     /**
      * Sort hashmap by values (TOP)
-     * @param hm
-     * @return
+     * @param hm hash map
+     * @return hash map sorted
      */
     public static HashMap<String, Integer> sortHashMapByValue(HashMap<String, Integer> hm) {
         // Create a list from elements of HashMap
         List<Map.Entry<String, Integer> > list =
-                new LinkedList<Map.Entry<String, Integer> >(hm.entrySet());
+                new LinkedList<>(hm.entrySet());
 
         // Sort the list
-        Collections.sort(list, new Comparator<Map.Entry<String, Integer> >() {
-            public int compare(Map.Entry<String, Integer> o1,
-                               Map.Entry<String, Integer> o2) {
-                return (o1.getValue()).compareTo(o2.getValue());
-            }
-        });
+        list.sort(Map.Entry.comparingByValue());
 
         // put data from sorted list to hashmap
         HashMap<String, Integer> temp = new LinkedHashMap<>();
@@ -251,7 +239,7 @@ public class Utils {
 
     /**
      * Sends console message.
-     * @param msg
+     * @param msg message
      */
     public static void sendMessage(String msg) {
         Bukkit.getConsoleSender().sendMessage(Utils.Color("&5&lAnchorSell &f - " + msg));
@@ -259,7 +247,7 @@ public class Utils {
 
     public static void sendConfigMessageF(String str, String toBeReplaced, String toReplace, CommandSender sender) {
         try {
-            sender.sendMessage(Color(Global.plugin.getConfig().getString(str).replaceAll(toBeReplaced, toReplace)));
+            sender.sendMessage(Color(Objects.requireNonNull(Global.plugin.getConfig().getString(str)).replaceAll(toBeReplaced, toReplace)));
         } catch (Exception e) {
             sendMessage("Check for config updates: &ahttps://github.com/FranciscoDadone/AnchorSell/blob/main/src/main/resources/config.yml");
         }
@@ -267,7 +255,7 @@ public class Utils {
 
     public static void sendConfigMessage(String str, CommandSender sender) {
         try {
-            sender.sendMessage(Color(Global.plugin.getConfig().getString(str)));
+            sender.sendMessage(Color(Objects.requireNonNull(Global.plugin.getConfig().getString(str))));
         } catch (Exception e) {
             sendMessage("Check for config updates: &ahttps://github.com/FranciscoDadone/AnchorSell/blob/main/src/main/resources/config.yml");
         }
@@ -288,7 +276,7 @@ public class Utils {
             return false;
         }
         try {
-            double d = Double.parseDouble(strNum);
+            Double.parseDouble(strNum);
         } catch (NumberFormatException nfe) {
             return false;
         }
@@ -304,7 +292,7 @@ public class Utils {
         Global.plugin.getConfig().set(path, value);
         Global.plugin.saveConfig();
         try {
-            ConfigUpdater.update(Global.plugin, "config.yml", new File(Global.plugin.getDataFolder(), "config.yml"), Arrays.asList());
+            ConfigUpdater.update(Global.plugin, "config.yml", new File(Global.plugin.getDataFolder(), "config.yml"), List.of());
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -314,7 +302,7 @@ public class Utils {
         Global.plugin.getConfig().set(path, value);
         Global.plugin.saveConfig();
         try {
-            ConfigUpdater.update(Global.plugin, "config.yml", new File(Global.plugin.getDataFolder(), "config.yml"), Arrays.asList());
+            ConfigUpdater.update(Global.plugin, "config.yml", new File(Global.plugin.getDataFolder(), "config.yml"), List.of());
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -322,27 +310,25 @@ public class Utils {
 
     /**
      * Prints the list of anchors of a user.
-     * @param p
-     * @param toSendBack
-     * @throws InvalidConfigurationException
+     * @param p player
+     * @param toSendBack sender
+     * @throws InvalidConfigurationException ex
      */
     public static boolean printAnchorUserList(OfflinePlayer p, CommandSender toSendBack) throws InvalidConfigurationException {
         boolean userFound = false;
 
-        toSendBack.sendMessage(Utils.Color(Global.plugin.getConfig().getString("anchor.list.first-message")));
+        toSendBack.sendMessage(Utils.Color(Objects.requireNonNull(Global.plugin.getConfig().getString("anchor.list.first-message"))));
 
         for(Anchor playerAnchor : StorageManager.getAllPlayerAnchors(p)) {
             userFound = true;
-            Utils.Color(Global.plugin.getConfig().getStringList("anchor.list.message")).forEach((str) -> {
-                toSendBack.sendMessage(
-                        str.replaceAll("%location%", "X: " + playerAnchor.getLocation().getX()
-                                        + " Y: " + playerAnchor.getLocation().getY()
-                                        + " Z: " + playerAnchor.getLocation().getZ())
-                                .replaceAll("%level%", String.valueOf(playerAnchor.getLevel()))
-                );
-            });
+            Utils.Color(Global.plugin.getConfig().getStringList("anchor.list.message")).forEach((str) -> toSendBack.sendMessage(
+                    str.replaceAll("%location%", "X: " + playerAnchor.getLocation().getX()
+                                    + " Y: " + playerAnchor.getLocation().getY()
+                                    + " Z: " + playerAnchor.getLocation().getZ())
+                            .replaceAll("%level%", String.valueOf(playerAnchor.getLevel()))
+            ));
         }
-        toSendBack.sendMessage(Utils.Color(Global.plugin.getConfig().getString("anchor.list.last-message")));
+        toSendBack.sendMessage(Utils.Color(Objects.requireNonNull(Global.plugin.getConfig().getString("anchor.list.last-message"))));
         return userFound;
     }
 
